--- a/views/client/partials/header.ejs
+++ b/views/client/partials/header.ejs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-style" role="navigation">
     <div class="navbar-menu">
         <div class="navbar-start">
-            <a class="navbar-item" href="index.html">
+            <a class="navbar-item" href="/">
                 HOME
             </a>
             <a class="navbar-item" href="ourproducts.html">
