--- a/views/client/about.ejs
+++ b/views/client/about.ejs
@@ -9,7 +9,7 @@
     <div class="container">
         <section class="section">
             <p class="title">New Beginnings</p>
-            <p>Baked Goods was founded on 2020 by three DLSU students and started out as a fun little project during the lockdown. It later grew to become a crowds favorite go-to online bakery thanks to its affordable price, ease of access and taste. It continues to provide its clients with highest quality bread for an affordable price.</p>
+            <p>Baked Goods was founded on 2020 by three DLSU students and started out as a fun little project during the lockdown. It later grew to become a crowds favorite go-to online bakery. Thanks to its accesibility, ease of access and taste, it continues to provide its clients with highest quality bread for an affordable price.</p>
             <br />
             <p><i>Photos and Videos from Pexels</i></p>
         </section>
