--- a/views/client/partials/header.ejs
+++ b/views/client/partials/header.ejs
@@ -7,7 +7,7 @@
             <a class="navbar-item" href="/products">
                 OUR PRODUCTS
             </a>
-            <a class="navbar-item" href="about.html">
+            <a class="navbar-item" href="/about">
                 ABOUT
             </a>
 
