--- a/views/admin/partials/header.ejs
+++ b/views/admin/partials/header.ejs
@@ -7,18 +7,11 @@
             <a class="navbar-item" href="/products">
                 PRODUCT MANAGEMENT
             </a>
-            <a class="navbar-item" href="/about">
+            <a class="navbar-item" href="/users">
                 USER MANAGEMENT
             </a>
 
         </div>
-        <%if(loggedIn == false){%>
-            <div class="navbar-end">
-                <a class="navbar-item" href="/login">
-                    LOGIN
-                </a>
-            </div>
-        <% } else {%>
             <div class="navbar-end">
                 <div class="navbar-item has-dropdown is-hoverable">
                     <a class="navbar-link">Hello, <%=name%></a>
@@ -30,6 +23,5 @@
                     </div>
                 </div>
             </div>
-        <%}%>
     </div>
 </nav>
