--- a/views/client/account.ejs
+++ b/views/client/account.ejs
@@ -25,8 +25,7 @@
                             </div>
                             <div class="column">
                                 <p><strong>Delivery Address: </strong></p>
-                                <p><%= result.deliveryAddress %>/p>
-                                <br />
+                                <p><%= result.deliveryAddress %></p>
                                 <br />
                                 <p><strong>Billing Address: </strong></p>
                                 <p><%= result.billingAddress %></p>
