--- a/views/client/product.ejs
+++ b/views/client/product.ejs
@@ -25,23 +25,25 @@
                 </figure>
             </div>
             <div class="column">
-                <% if(error.length > 0) { %>
-                    <% error.forEach(function(element) { %>
-                        <div class="message is-danger">
-                            <div class="message-body">
-                                <p><%=element.msg%></p>
-                            </div>    
-                        </div>
-                    <% }); %>
-
-                <% } %>
+                <div id="errors">
+                    <% if(error.length > 0) { %>
+                        <% error.forEach(function(element) { %>
+                            <div class="message is-danger">
+                                <div class="message-body">
+                                    <p><%=element.msg%></p>
+                                </div>    
+                            </div>
+                        <% }); %>
+    
+                    <% } %>
+                </div>
                 <p class="title product-page-title"><%=result.name %></p>
                 <p class="subtitle product-page-price">₱<%= result.sizes[0].price %></p>
                 <p class="subtitle"><%=result.description %></p>
                 <p></p>
                 <form>
 					<div class="select select-styled is-warning">
-						<select class="select-styled">
+						<select class="select-styled" id="sizes">
                             <% result.sizes.forEach(function(element) { %>
                                 <option><span><%=element.size %></span> @ <span><%=element.price %></span>PHP</option>
                             <%  }) %>
@@ -51,7 +53,7 @@
 					<div class="field has-addons">
                         <% if(loggedIn == true)  {%>
                             <div class="control">
-                                <button class="button submit-button">Add to Cart</button>
+                                <button class="button submit-button" id="addToCart">Add to Cart</button>
                             </div>
                         <% } else { %>
                             <p>You must be logged in to make an order.</p>
@@ -59,54 +61,62 @@
                     </div>
                 </form>
                 <hr class="is-divider"/>
-                <p class="title">Reviews</p>
+                <div id="reviews">
+                    <p class="title">Reviews</p>
 
-                <% if(result.reviews.length == 0) { %>
-                    <p>No Reviews Available for this Product.</p>
-                    <br />
-                <% } %>
-
-
-                <% result.reviews.forEach(function(element) { %>
-                    <article class="media">
-                        <div class="content">
-                            <p class="title is-6"><%=element.fullName%></p>
-                            <p><%=element.review%></p>
-                        </div>
-                        <% if(userId == element.userId) { %>	
-                            <div class="media-right dropdown is-hoverable">
-                                <span class="material-icons">more_horiz</span>
-                                <div class="dropdown-menu">
-                                    <div class="dropdown-content">
-                                        <div class="dropdown-item"><p>Edit</p></div>
-                                        <div class="dropdown-item"><a href="<%- path.join('/products/' + result.productId + '/deleteReview')%>">Delete</a></div>
+                    <% if(result.reviews.length == 0) { %>
+                        <p>No Reviews Available for this Product.</p>
+                        <br />
+                    <% } %>
+    
+                    <% result.reviews.forEach(function(element) { %>
+                        <article class="media">
+                            <div class="content">
+                                <p class="title is-6"><%=element.fullName%></p>
+                                <p><%=element.review%></p>
+                            </div>
+                            <% if(userId == element.userId) { %>	
+                                <div class="media-right dropdown is-hoverable">
+                                    <span class="material-icons">more_horiz</span>
+                                    <div class="dropdown-menu">
+                                        <div class="dropdown-content">
+                                            <div class="dropdown-item"5><p>Edit</p></div>
+                                            <div class="dropdown-item"><a id="deleteReview">Delete</a></div>
+                                        </div>
                                     </div>
                                 </div>
+                            <%}%>	
+                        </article>
+                    <% }) %>
+                </div>
+                <hr />
+                <div>
+                    <% if(loggedIn == true) { %>
+                        <article class="media">
+                            <div class="media-content">
+                                <form>
+                                    <textarea id="review-body" name="review" class="textarea input-styled" placeholder="Add a Review..."></textarea>
+                                    <div class="block"></div>
+                                    <div class="control">
+                                        <input type="submit" class="button submit-button" name="Submit" id="addReview">
+                                    </div>
+                                </form>
                             </div>
-                        <%}%>	
-                    </article>
-                <% }) %>
-                <% if(loggedIn == true) { %>
-                    <article class="media">
-                        <div class="media-content">
-                            <form action="<%- path.join('/products/' + result.productId + '/addReview')%>" method="POST">
-                                <textarea name="review" class="textarea input-styled" placeholder="Add a Review..."></textarea>
-                                <div class="block"></div>
-                                <div class="control">
-                                    <input type="submit" class="button submit-button" name="Submit">
-                                </div>
-                            </form>
-                        </div>
-                    </article>
-                <% } else { %>
-                    <article class="media">
-                        <div class="media-content">
-                            <p>You must be logged in to write a review. <a href="/login">Login here.</a></p>
-                        </div>
-                    </article>
-                <% } %>
+                        </article>
+                    <% } else { %>
+                        <article class="media">
+                            <div class="media-content">
+                                <p>You must be logged in to write a review. <a href="/login">Login here.</a></p>
+                            </div>
+                        </article>
+                    <% } %>
             </div>
+                </div>  
         </div>
     </section>
     <%- include('./partials/footer.ejs');%>
 </div>
+
+<script>
+    var productId = <%= result.productId %>;
+</script>
