--- a/views/client/partials/header.ejs
+++ b/views/client/partials/header.ejs
@@ -25,7 +25,7 @@
 
                     <div class="navbar-dropdown">
                         <a class="navbar-item" href="/account">My Account</a>
-                        <a class="navbar-item" href="cart.html">My Cart</a>
+                        <a class="navbar-item" href="/cart">My Cart</a>
                         <hr class="navbar-divider" />
                         <a class="navbar-item" href="/logout">Logout</a>
                     </div>
