--- a/views/admin/partials/header.ejs
+++ b/views/admin/partials/header.ejs
@@ -4,10 +4,10 @@
             <a class="navbar-item" href="/">
                 HOME
             </a>
-            <a class="navbar-item" href="/products">
+            <a class="navbar-item" href="/admin/admin-product">
                 PRODUCT MANAGEMENT
             </a>
-            <a class="navbar-item" href="/users">
+            <a class="navbar-item" href="/admin/admin-accounts">
                 USER MANAGEMENT
             </a>
 
