--- a/views/admin/partials/head.ejs
+++ b/views/admin/partials/head.ejs
@@ -8,7 +8,7 @@
 
     <!-- CSS Links -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../css/main.css">
+    <link rel="stylesheet" type="text/css" href="../css/admin.css">
 
     <!-- Javascript Links-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
