--- a/views/client/cart.ejs
+++ b/views/client/cart.ejs
@@ -12,8 +12,11 @@
             <section class="section">
                 <div class="columns">
                 <%- include('./partials/accountMenu.ejs'); %>
-                    <div class="column">
-                        <div class="myaccount-container">
+                    <div class="column"">
+                        <div id="errors">
+
+                        </div>
+                        <div class="myaccount-container" id="cart">
                             <div class="level">
                                 <div class="level-left">
                                     <div class="level-content">
@@ -22,6 +25,9 @@
                                 </div>
                             </div>
                             <hr class="is-divider">
+                            <% if(cartContent.length < 1) { %>
+                                <p>Your cart is currently empty. <a href='/products'>Continue Shopping</a></p>
+                            <% } else { %>
                                 <table class="table is-fullwidth">
                                     <thead>
                                         <tr>
@@ -35,19 +41,23 @@
                                     <tbody>
                                         <% cartContent.forEach(function(element) { %>
                                             <tr>
+                                                <td style="display: none" id="productId"><%= element.productId %></td>
                                                 <td><%= element.quantity %></td>
                                                 <td><%=element.productName %></td>
                                                 <td><%=element.price / element.quantity %></td>
                                                 <td><%= element.price %></td>
-                                                <td><button class="button submit-button is-small">Delete</button></td>
+                                                <td><button class="button submit-button is-small" id="deleteCartItem">Delete</button></td>
                                             </tr>
                                         <% }); %>
-
                                     </tbody>
                                 </table>
                                 <div class="level">
                                     <div class="level-left">
-                                        <p class="is-small">*Note: All our goods are VAT-Inclusive (12% Added Value Tax)</p>
+                                        <p class="is-small">
+                                            *Note: All our goods are VAT-Inclusive (12% Added Value Tax)
+                                            <br />
+                                            *Delivery only available with Metro Manila. Standard Delivery Fee of P150 applies.
+                                        </p>
                                     </div>
                                     <div class="level-right">
                                         <div class="level-item">
@@ -55,21 +65,22 @@
                                                 <tbody>
                                                     <tr>
                                                         <th>Subtotal: </th>
-                                                        <td>1980</td>
+                                                        <td><%=subtotal%></td>
                                                     </tr>
                                                     <tr>
                                                         <th>Delivery: </th>
-                                                        <td>50</td>
+                                                        <td><%=delivery%></td>
                                                     </tr>
                                                     <tr>
                                                         <th>Total: </th>
-                                                        <td>2030</td>
+                                                        <td><%=total%></td>
                                                     </tr>
                                                 </tbody>
                                             </table>
                                         </div>
                                     </div>
                                 </div>
+                            <% } %>
                             </div>
                             <div class="container px-0 has-text-right-desktop"><a class="button is-medium submit-button" href="checkout.html">Proceed to Checkout</a></div>
                         </div>
@@ -78,10 +89,5 @@
 
             </section>
         </div>
-
+        <%- include('./partials/footer.ejs');%>
     </div>
-
-
-</body>
-
-</html>
