--- a/views/client/product.ejs
+++ b/views/client/product.ejs
@@ -54,6 +54,7 @@
                         <% if(loggedIn == true)  {%>
                             <div class="control">
                                 <button class="button submit-button" id="addToCart">Add to Cart</button>
+                                <button class="button submit-button" id="addToFavorites">Add to Favorites</button>
                             </div>
                         <% } else { %>
                             <p>You must be logged in to make an order.</p>
