--- a/views/client/product.ejs
+++ b/views/client/product.ejs
@@ -21,7 +21,7 @@
         <div class="columns">
             <div class="column">
                 <figure class="image is-3by2 product-page-image">
-                    <image src="../../img/products/breads/sourdough.jpg"></image>
+                    <image src="<%=path.join('../img/products/' + result.image)%>"></image>
                 </figure>
             </div>
             <div class="column">
@@ -54,7 +54,15 @@
                         <% if(loggedIn == true)  {%>
                             <div class="control">
                                 <button class="button submit-button" id="addToCart">Add to Cart</button>
-                                <button class="button submit-button" id="addToFavorites">Add to Favorites</button>
+                                <span id="favorites">
+                                    <% if(isFavorite == false) { %>
+                                        <button class="button submit-button" id="addToFavorites">Add to Favorites</button>
+                                    <% } else { %>
+                                        <button class="button submit-button" id="removeFromFavorites">Remove from Favorites</button>
+                                    <% } %>
+                                </span>
+
+                                
                             </div>
                         <% } else { %>
                             <p>You must be logged in to make an order.</p>
@@ -120,4 +128,5 @@
 
 <script>
     var productId = <%= result.productId %>;
+    var userId = '<%=userId%>';
 </script>
