--- a/views/admin/partials/head.ejs
+++ b/views/admin/partials/head.ejs
@@ -13,4 +13,5 @@
     <!-- Javascript Links-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="../js/main.js"></script>
+    <script src="../js/adminbackend.js"></script>
 </head>
